--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -181,3 +181,9 @@ body {
 #signup_button:hover {
     color: blue;
 }
+
+.err {
+    text-align: center;
+    font: bold 12pt sans-serif;
+    color: red;
+}
